--- a/templates/static-site.conf.j2
+++ b/templates/static-site.conf.j2
@@ -89,7 +89,7 @@ server {
 # Redirect to https
 server {
   listen 80;
-  server_name {{ site_hosts }};
+  server_name {{ site_hosts_canonical | join(' ') }};
 
   {{ self.acme_challenge() -}}
 
