Bring a few changes from trellis for nginx config

--- a/templates/static-site.conf.j2
+++ b/templates/static-site.conf.j2
@@ -4,6 +4,7 @@
 
 server {
   {% block server_id -%}
+  listen {{ ssl_enabled | ternary('[::]:443 ssl http2', '[::]:80') }};
   listen {{ ssl_enabled | ternary('443 ssl http2', '80') }};
   server_name {{ site_hosts_canonical | join(' ') }};
   {% endblock %}
@@ -88,10 +89,13 @@ server {
 {% if ssl_enabled %}
 # Redirect to https
 server {
+  listen [::]:80;
   listen 80;
   server_name {{ site_hosts_canonical | join(' ') }};
 
   {{ self.acme_challenge() -}}
+
+  {{ self.includes_d() -}}
 
   location / {
     return 301 https://$host$request_uri;
@@ -107,15 +111,22 @@ server {
 {% endif %}
 {% for host in item.value.site_hosts if host.redirects | default([]) %}
 server {
-  listen {{ ssl_enabled | ternary('443 ssl http2', '80') }};
+  {% if ssl_enabled -%}
+  listen [::]:443 ssl http2;
+  listen 443 ssl http2;
+  {% endif -%}
+  listen [::]:80;
+  listen 80;
   server_name {{ host.redirects | join(' ') }};
 
   {{ self.https() -}}
 
   {{ self.acme_challenge() -}}
 
+  {{ self.includes_d() -}}
+
   location / {
-    return 301 $scheme://{{ host.canonical }}$request_uri;
+    return 301 {{ ssl_enabled | ternary('https', 'http') }}://{{ host.canonical }}$request_uri;
   }
 }
 {% endfor %}
